Archive2/a8/5b0c1ae417367a/output
main.cpp: In instantiation of 'void f(T&) [with T = int*]':
main.cpp:7:54:   required from 'void f(T*) [with T = int*]'
main.cpp:12:30:   required from here
main.cpp:6:24: error: incomplete type 'Specialized<int*>' used in nested name specifier
 template<class T> void f(T& t) noexcept(Specialized<T>::value);
                        ^
